<resources>
    <string name="app_name">Tweeter</string>

    <string name="logoutMenuTitle">Logout</string>

    <string name="homePageTitle">Home</string>
    <string name="userImageContentDescription">The user\'s image</string>

    <string name="usernameHint">Username</string>
    <string name="password">Password</string>
    <string name="loginButton">login</string>

    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="uploadPicture">Take Profile Picture</string>
    <string name="afterUploadPicture">Retake Profile Picture</string>
    <string name="registerButton">Register</string>

    <string name="follow">Follow</string>
    <string name="following">Following</string>

    <string name="dialogStatusHint">What is on your mind?</string>

    <string name="statusDash"> - </string>

    <string name="title_activity_main">Tweeter</string>
    <string name="loadingData">Loading More Data…</string>
    <string name="feedTabTitle">Feed</string>
    <string name="storyTabTitle">Story</string>
    <string name="followingTabTitle">Following</string>
    <string name="followersTabTitle">Followers</string>

    <string name="loginTabTitle">Login</string>
    <string name="registerTabTitle">Register</string>

    <string name="sampleAlias">"@UserAlias"</string>
    <string name="sampleUserName">The User</string>
    <string name="title_activity_login">Sign in</string>
    <string name="followeeCount">Following: %s</string>
    <string name="followerCount">Followers: %s</string>
    <string name="title_activity_landing_page">LandingPageActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="character_name">character name</string>
    <string name="strength_score">___</string>
    <string name="strength_mod">___</string>
    <string name="Dexterity_score">___</string>
    <string name="Dexterity_mod">___</string>
    <string name="Constitution_score">___</string>
    <string name="dexterity_score">___</string>
    <string name="dexterity_mod">___</string>
    <string name="constitution_score">___</string>
    <string name="constitution_mod">___</string>
    <string name="intelligence_score">___</string>
    <string name="intelligence_mod">___</string>
    <string name="wisdom_score">___</string>
    <string name="wisdom_mod">___</string>
    <string name="charisma_score">___</string>
    <string name="charisma_mod">___</string>
    <string name="strength_save">__</string>
    <string name="dexterity_save">__</string>
    <string name="constitution_save">__</string>
    <string name="intelligence_save">__</string>
    <string name="wisdom_save">__</string>
    <string name="charisma_save">__</string>
    <string name="AnimalHandlingBonus">__</string>
    <string name="AcrobaticsBonus">__</string>
    <string name="ArcanaBonus">__</string>
    <string name="AthleticsBonus">__</string>
    <string name="DeceptionBonus">__</string>
    <string name="HistoryBonus">__</string>
    <string name="InsightBonus">__</string>
    <string name="IntimidationBonus">__</string>
    <string name="InvestigationBonus">__</string>
    <string name="MedicineBonus">__</string>
    <string name="NatureBonus">__</string>
    <string name="PerceptionBonus">__</string>
    <string name="PerformanceBonus">__</string>
    <string name="PersuasionBonus">__</string>
    <string name="ReligionBonus">__</string>
    <string name="SleightOfHandBonus">__</string>
    <string name="StealthBonus">__</string>
    <string name="SurvivalBonus">__</string>
    <string name="ProficiencyBonus">__</string>
</resources>
