<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginHorizontal="50dp">

        <EditText
            android:id="@+id/registerFirstName"
            android:layout_height="50dp"
            android:layout_width="match_parent"
            android:inputType="text"
            android:hint="@string/firstName"
            android:layout_marginBottom="10dp"
            android:drawableStart="@drawable/input_person_icon"
            android:drawablePadding="12dp"
            android:background="@drawable/input"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"/>

        <EditText
            android:id="@+id/registerLastName"
            android:layout_height="50dp"
            android:layout_width="match_parent"
            android:inputType="text"
            android:hint="@string/lastName"
            android:layout_marginBottom="10dp"
            android:drawableStart="@drawable/input_person_icon"
            android:drawablePadding="12dp"
            android:background="@drawable/input"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"/>

        <EditText
            android:id="@+id/registerUsername"
            android:layout_height="50dp"
            android:layout_width="match_parent"
            android:inputType="text"
            android:hint="@string/usernameHint"
            android:layout_marginBottom="10dp"
            android:drawableStart="@drawable/input_profile_icon"
            android:drawablePadding="12dp"
            android:background="@drawable/input"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"/>

        <EditText
            android:id="@+id/registerPassword"
            android:layout_height="50dp"
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:layout_marginBottom="10dp"
            android:drawableStart="@drawable/input_lock_icon"
            android:drawablePadding="12dp"
            android:background="@drawable/input"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"/>


        <Button
            android:id="@+id/imageButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/thebutton"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/montserrat_extra_bold"
            android:layout_marginBottom="10dp"
            android:text="@string/uploadPicture"></Button>

        <ImageView
            android:id="@+id/registerImage"
            android:layout_height="0dp"
            android:layout_width="0dp" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/registerButton"
            android:textColor="@color/white"
            android:fontFamily="@font/montserrat_extra_bold"
            android:background="@drawable/thebutton"></Button>

        <TextView
            android:id="@+id/registerError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@android:color/holo_red_light" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>