<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginHorizontal="50dp">

        <EditText
            android:id="@+id/loginUsername"
            android:layout_height="50dp"
            android:layout_width="match_parent"
            android:layout_marginBottom="20dp"
            android:drawableStart="@drawable/input_profile_icon"
            android:drawablePadding="12dp"
            android:inputType="text"
            android:hint="@string/usernameHint"
            android:background="@drawable/input"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"/>

        <EditText
            android:id="@+id/loginPassword"
            android:layout_height="50dp"
            android:layout_width="match_parent"
            android:layout_marginBottom="20dp"
            android:drawableStart="@drawable/input_lock_icon"
            android:drawablePadding="12dp"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:background="@drawable/input"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"/>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/loginButton"
            android:textColor="@color/white"
            android:fontFamily="@font/montserrat_extra_bold"
            android:background="@drawable/thebutton">

        </Button>

        <TextView
            android:id="@+id/loginError"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textColor="@android:color/holo_red_light" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>